app/component/itinerary.scss
/* ... */
@media print {
  .itinerary-main {
    display: block;
    height: auto;
  }
}
.itinerary-summary {
  flex-grow: 0;
  flex-shrink: 0; //for ie mobile
  position: absolute;
  top: 52px;
  right: 68px;
  color: #333;
  font-weight: $font-weight-book;
  .icon-container {
    vertical-align: text-bottom;
  }
  .icon {
    height: 1.2em;
    width: 1.2em;
  }
  .duration {
    padding-left: 12px;
  }
  .duration, .walk-distance {
    vertical-align: super;
    font-size: 0.9375rem;
  }
}

.itinerary-icon-container {
  position: absolute;
  width: 17px;
  height: 17px;
  left: 2px;
  z-index: 10;
  &.start {
    top: 12px;
  }
}

.itinerary-icon {
  position: absolute;
  margin-left: -21px;
  margin-top: 2px;
  fill: currentColor;

  @mixin itineraryTableIcons() {
    font-size: $font-size-normal;
    width: 24px;
    height: 24px;
    margin-left: -0.2em;
    background-color: $white;
  }
  &.to-it {
    @include itineraryTableIcons();
    top: 4px;
  }
  &.from-it {
    @include itineraryTableIcons();
    top: -4px;
  }
  &.via-it {
    @include itineraryTableIcons();
  }
}
.itinerary-search-icon {
  color: $primary-color;
}

.duration {
  font-weight: 500;
}

.duration--itinerary-summary,
.biking-distance--itinerary-summary {
  padding-right: 27px;
}

.itinerary-disclaimer {
  color: #333;
  margin: 1em 1em 1em 0em;
  font-size: $font-size-small;
  white-space: normal;
}

.mobile .itinerary-disclaimer {
  padding: 0 0.6em;
}

.itinerary-ticket-information {
  display: flex;
  color: $gray;
  font-weight: $font-weight-book;
  font-size: $font-size-small;
  margin: 0;
  border: 0px;
  border-top: 1px solid #ddd;
  .ticket-type-agency-link {
    flex: 0;
    .external-link-container {
      width: 140px;
      text-align: center;
      border-radius: 25px;
      border: 1px solid #666;
      min-height: 30px;
      .external-link {
        font-weight: 500;
        color: #666;
        font-size: $font-size-small;
        padding-top: 3px;
      }
    }
  }

  .itinerary-ticket-external-link {
    align-self: center;
    .external-link-container {
      width: 140px;
      text-align: center;
      border-radius: 25px;
      border: 1px solid #666;
      min-height: 30px;
      a {
          font-weight: 500;
          color: #666;
          font-size: $font-size-small;
          padding-top: 3px;
      }
  }

    .external-link-icon-outer {
      color: white;
    }

    .external-link-icon {
      color: $primary-color;
    }
  }

  .itinerary-ticket-type {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    flex-shrink: 1;
    white-space: normal;
    line-height: 1.33;
    border-bottom: 1px solid #ddd;
    .ticket-container {
      display: flex;
    }
    .ticket-info-container {
      flex: 1;
      padding: 14px 0;
    }
    .ticket-type-agency-link {
      align-self: center;
      padding-left: 10px;
    }

    .ticket-type-zone {
      @include font-book;
      align-items: center;
      color: $gray;
      display: flex;
      justify-content: space-between;
      flex: 1;
      .unknown-fare-container {
        display: block;
        .ticket-description {
          padding: 0;
        }
      }
      &.multi-component + .multi-component {
        border-top: 1px solid $light-gray;
        padding-top: $padding-medium;
      }
      div {
        display: flex;
        .ticket-description {
          display: flex;
          padding-left: 3px;
        }
        .ticket-identifier {
          @include font-medium;
          color: $black;
        }
      }
      .ticket-type-agency-link {
        flex-grow: 0;
      }
    }
  }
}

.zone-ticket-multiple-options {
  display: flex;
  flex: 0;
  span + span {
    margin-left: $padding-xsmall;
  }
  .or {
    padding: 0 3px;
    flex: 0;
  }
}

.zone-ticket {
  color: #333;
  letter-spacing: -0.5px;
  text-align: center;
  font-size: $font-size-small;
}

.desktop {
  .itinerary-ticket-information {
    font-size: 0.9375rem;
  }
}
.call-agency {
  background-color: yellow;
}
.leg-before-circle {
  &.top {
    top: 7px;
  }
  position: absolute;
  z-index: 9;
  @include setModeCircles(#fff);
  &.circle-fill {
    &.bus {
      @include setModeCircles($bus-color);
    }
    &.airplane {
      @include setModeCircles($airplane-color);
    }
    &.tram {
      @include setModeCircles($tram-color);
    }
    &.subway {
      @include setModeCircles($metro-color);
    }
    &.rail {
      @include setModeCircles($rail-color);
    }
    &.ferry {
      @include setModeCircles($ferry-color);
    }
    &.citybike {
      @include setModeCircles($citybike-color);
    }
    &.walk {
      @include setModeCircles($walk-color);
    }
    &.wait {
      @include setModeCircles($wait-color);
    }
    &.bicycle {
      @include setModeCircles($bicycle-color);
    }
    &.bicycle_walk {
      @include setModeCircles($walk-color);
    }
    &.car {
      @include setModeCircles($car-color);
    }
    &.via {
      @include setModeCircles($walk-color);
    }
    &.call {
      @include setModeCircles($bus-color);
    }
  }
}
/* ... */

